# Eddie

./: .gitattributes  .gitignore  .travis.yml  README.md  changelog.txt  fix-permissions.sh  flake.nix
Providers/: OpenVPN.xml
common/: gpl3.txt  iso-3166.json
common/lang/: inv.json
common/providers/: AirVPN.json  OpenVPN.json  OpenVPN.xml  WireGuard.json
dependencies/PStreams/: pstream.h
dependencies/base64/: base64.h
dependencies/sha256/: sha256.h
dependencies/yxml/: yxml.cpp
deploy/linux_aarch64/: eddie-tray  hummingbird  libappindicator.so.1  libayatana-appindicator.so.1  libayatana-appindicator3.so.1  libayatana-ido3-0.4.so.0  libayatana-indicator.so.7  libayatana-indicator3.so.7  libcrypto.so.1.1  libdbusmenu-glib.so.4  libdbusmenu-gtk.so.4  libdbusmenu-gtk3.so.4  libgdiplus.so.0  liblz4.so.1  (+6 more)
nix/: deps.nix
providers/: AirVPN.xml
repository/: build_all_linux.sh  build_all_macos.sh  build_all_windows.bat  build_linux.sh  build_linux_private.sh  build_macos.sh  build_macos_private.sh  build_windows.bat  build_windows_net5.bat  build_windows_private.bat  build_windows_ui3_private.bat  man_upload.sh  readme.txt
resources/: eddie-vpn.txt  icon-cli.icns  iso-3166.json  libraries.txt  manifest.json
src/: .editorconfig  AirVPN.sln  Build_RPI.sh  Changelogs.txt  Eddie2_VS2017_Linux.sln  Eddie3_XBuild.sh  Eddie_Cocoa.sln  Eddie_VS2015.sln  Eddie_XBuild.sh  build_linux_x64.sh  eddie.linux.clean.sh  eddie.linux.cli.net5.sln  eddie.linux.cli.net6.sln  eddie.linux.cli.sln  eddie.linux.postbuild.sh  eddie.macos.clean.sh  eddie.macos.cli.net5.sln  eddie.macos.cli.net6.sln  eddie.macos.cli.sln  eddie.macos.postbuild.sh  eddie.macos.prebuild.sh  eddie.windows.clean.bat  eddie.windows.cli.net5.sln  eddie.windows.cli.net6.sln  eddie.windows.cli.sln  eddie.windows.postbuild.bat  eddie2.android.sln  eddie2.linux.sln  eddie2.linux.ui.net5.sln  eddie2.linux.ui.net6.sln  eddie2.linux.ui.sln  eddie2.macos.sln  eddie2.macos.ui.net5.sln  eddie2.macos.ui.net6.sln  eddie2.macos.ui.sln  eddie2.mobile.sln  eddie2.windows.sln  eddie2.windows.ui.net5.sln  eddie2.windows.ui.net6.sln  eddie2.windows.ui.sln  (+15 more)
src/Lib.Platform.Linux.Native/: CMakeLists.txt  build-armhf.sh  build-multilib.sh  build.sh  lib.cpp  lib.h  readme.txt
src/Lib.Platform.Linux.Native/include/: lib.h
src/Lib.Platform.Linux.Native/src/: api.cpp  api.h  lib.cpp  stdafx.h  types.h
src/Lib.Platform.Linux.Native/src/workspace/codeblocks/: Lib.Platform.Linux.Native.cbp
src/Lib.Platform.macOS.Native/: CMakeLists.txt  build.sh  lib.cpp  lib.h  readme.txt
src/Lib.Platform.macOS.Native/src/: api.cpp  api.h  json.hpp  lib.h  macros.h  stdafx.h  types.h
src/UI.GTK.Linux.Tray/: CMakeLists.txt  UI.GTK.Linux.Tray.cbp  build-aarch64.sh  build-armhf.sh  build-x64.sh  build-x86.sh  build.sh  main.cpp  readme.txt
src/UI.GTK.Linux.Tray/src/: main.cpp
(+1663 files in other folders)
